# Touch_Controller_Arm2-test

./: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  Makefile  README.md  Touch_Controller_Arm2  Touch_Controller_Arm2.cpp  build.sh  build_with_ros2.sh  config.ini  package.xml  ros2_hand_controller.py  run2.sh  run_ros2_hand_controller.sh  setup_touch_environment.sh  start_touch_controller.sh  start_with_dexterous_hand.sh  test_device1_mapping  test_device1_mapping.cpp  test_device_config.cpp  test_hand_integration.cpp  test_scissors_control  test_scissors_control.cpp  usb_touch_device_reader  usb_touch_device_reader.cpp  verify_device1_config  verify_device1_config.cpp  verify_device1_mapping.cpp
OpenHaptics/: Makefile  README.md
OpenHaptics/TouchDriver_2023_01_12/: install_haptic_driver
OpenHaptics/TouchDriver_2024_09_19/: ListCOMPortHapticDevices  install_haptic_driver
OpenHaptics/TouchDriver_2024_09_19/rules.d/: 99-3dsystems.rules
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/config/: Device Temperature (24059000105)  Device Temperature (24059000113)
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/: DragController.cpp  DragController.h  DragControllerMain  DragControllerMain.cpp  HD_Programs_Documentation.md  HL_Graphics_Programs_Documentation.md  Makefile
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/console/AnchoredSpringForce/: AnchoredSpringForce  Makefile
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/console/Calibration/: Calibration  Makefile
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/console/CommandJointTorque/: CommandJointTorque  Makefile
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/console/CommandMotorDAC/: Makefile
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/console/ErrorHandling/: ErrorHandling  Makefile
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/console/FrictionlessPlane/: FrictionlessPlane  Makefile
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/console/FrictionlessSphere/: FrictionlessSphere  Makefile
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/console/HelloHapticDevice/: HelloHapticDevice  Makefile
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/console/PreventWarmMotors/: Makefile  PreventWarmMotors
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/console/QueryDevice/: Makefile  QueryDevice
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/console/ServoLoopDutyCycle/: Makefile  ServoLoopDutyCycle
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/console/ServoLoopRate/: Makefile  ServoLoopRate
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/graphics/CoulombField/: CoulombField
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/graphics/CoulombForceDual/: CoulombForceDual
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/graphics/ParticleWaltz/: ParticleWaltz
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/graphics/PointManipulation/: PointManipulation
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/graphics/PointSnapping/: PointSnapping
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/graphics/SimpleHapticScene/: SimpleHapticScene
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HD/graphics/SlidingContact/: SlidingContact
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HL/console/CannedForceEffect/: CannedForceEffect
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HL/console/CustomForceEffect/: CustomForceEffect
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HL/console/CustomShape/: CustomShape
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HL/console/Deployment/: Deployment
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HL/console/EffectAttributes/: EffectAttributes
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HL/graphics/Constraints/: Constraints
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/opt/OpenHaptics/Developer/3.4-0/examples/HL/graphics/Events/: Events
OpenHaptics/openhaptics_3.4-0-developer-edition-amd64/usr/include/HD/: hd.h  hdExport.h
install/: local_setup.sh  setup.sh
install/touch_controller_arm/lib/touch_controller_arm/: Touch_Controller_Arm2
install/touch_controller_arm/share/touch_controller_arm/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/touch_controller_arm/share/touch_controller_arm/cmake/: touch_controller_armConfig.cmake
linker_hand_python_sdk/LinkerHand/: __init__.py
linker_hand_python_sdk/LinkerHand/config/: L7_positions.yaml  setting.yaml
log/: latest_build
md/: README_ROS2_SUCCESS.md  README_SCRIPTS.md  ROS2集成说明.md  config_mapping_usage.md  test_load_comments.ini  加载说明.md  双Touch设备使用说明.md  双设备控制说明.md  容错功能测试说明.md  构建指南.md  灵巧手集成完成总结.md  灵巧手集成指南.md  灵巧手集成说明.md  配置映射完整性报告.md
test/: check_touch_environment.sh  diagnose_touch.sh  test_json_ros2_messages.sh
(+9 files in other folders)
